--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "connect-mongo": "^2.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "ejs": "^3.1.2",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.4",
-    "express-handlebars": "^3.1.0",
+    "express-handlebars": "^4.0.3",
     "express-session": "^1.16.1",
     "express-validator": "^5.3.1",
     "form-data": "^2.3.3",
@@ -45,6 +46,7 @@
     "path": "^0.12.7",
     "randomstring": "^1.1.5",
     "request": "^2.88.0",
+    "smtp": "^0.1.4",
     "socket.io": "^2.3.0",
     "string-split": "^0.3.1",
     "text": "^0.1.0",
